--- a/STEER/Makefile
+++ b/STEER/Makefile
@@ -3,13 +3,6 @@ PACKAGE = invalid-only-for-proof
 include $(ROOTSYS)/test/Makefile.arch
 include lib$(PACKAGE).pkg
 
-ifndef PACKCXXFLAGS
-PACKCXXFLAGS = $(CXXFLAGS)
-endif
-
-ifneq ($(ESD_INCLUDE),)
-   PACKCXXFLAGS += -I../$(ESD_INCLUDE)
-endif
 SRCS         += G__$(PACKAGE).cxx
 OBJS          = $(SRCS:.cxx=.o)
 
@@ -25,12 +18,12 @@ endif
 	@echo "done"
 
 %.o:    %.cxx %.h
-	$(CXX) $(PACKCXXFLAGS) -c $< -o $@
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
 	@rm -f $(OBJS) *.so G__$(PACKAGE).*
 
 G__$(PACKAGE).cxx G__$(PACKAGE).h: $(HDRS) $(DHDR)
 	@echo "Generating dictionary ..."
-	rootcint -f $@ -c $(CINTFLAGS) $(ALICEINC) $^
+	rootcint -f $@ -c $(ALICEINC) $^
 
