added AOD in the include path

--- a/ANALYSIS/Makefile
+++ b/ANALYSIS/Makefile
@@ -8,6 +8,7 @@ ALICEINC      = -I.
 ### define include dir for local case and par case
 ifneq ($(ESD_INCLUDE),)
    ALICEINC += -I../$(ESD_INCLUDE)
+   ALICEINC += -I../$(AOD_INCLUDE)
 else
   ifneq ($(ALICE_ROOT),)
     ALICEINC += -I$(ALICE_ROOT)/include 
